refactor: use 'Math.min(Math.max(v, min), max)' instead of 'Math.max(min, Math.min(v, max))'